Fix bug visibility

--- a/css/style.css
+++ b/css/style.css
@@ -518,6 +518,7 @@ p.indent{
   }
   
   .container{
+      visibility: hidden;
       animation: fadein 1s cubic-bezier(.89, .05, .8, .9) forwards;
   }
 
